# Mare

./: .gitignore  CMakeLists.txt  Entry.cpp  ISSUES.md  Makefile  README.md  nok.goo  ok.goo  ok.mare  test.mare
Compiler/: goo.cpp  llvm-test-jit.cpp  main.cpp
Compiler/Include/: AST.hpp  CmdLineParser.hpp  Colors.h  Compiler.hpp  Config.hpp.in  Diagnostics.hpp  ErrorHandling.hpp  Gen.hpp  GenHelper.hpp  Globals.hpp  Parser.hpp  PrimitiveTypes.hpp  Tokenizer.hpp  Utils.hpp
Compiler/JIT/: JIT.hpp
Runtime/: Runtime.cpp  Runtime.h
